-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b114
-
Verified
The assert added by JDK-8023191 fails:
Stack: [0x00007fd19d435000,0x00007fd19d536000], sp=0x00007fd19d533030, free space=1016k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1443692] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
V [libjvm.so+0x144438f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0x94e9bd] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x10d29af] nmethod::invalidate_osr_method()+0x5f
V [libjvm.so+0x10dcb8e] nmethod::make_not_entrant_or_zombie(unsigned int)+0xee
V [libjvm.so+0x978cc6] Deoptimization::uncommon_trap_inner(JavaThread*, int)+0xc06
V [libjvm.so+0x97d9a5] Deoptimization::uncommon_trap(JavaThread*, int, int)+0x45
v blob 0x00007fd2ebc04d1e
C 0x0000000500066fa8
Stack: [0x00007fd19d435000,0x00007fd19d536000], sp=0x00007fd19d533030, free space=1016k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1443692] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
V [libjvm.so+0x144438f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0x94e9bd] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x10d29af] nmethod::invalidate_osr_method()+0x5f
V [libjvm.so+0x10dcb8e] nmethod::make_not_entrant_or_zombie(unsigned int)+0xee
V [libjvm.so+0x978cc6] Deoptimization::uncommon_trap_inner(JavaThread*, int)+0xc06
V [libjvm.so+0x97d9a5] Deoptimization::uncommon_trap(JavaThread*, int, int)+0x45
v blob 0x00007fd2ebc04d1e
C 0x0000000500066fa8
- relates to
-
JDK-8023191 OSR nmethods should be flushed to free space in CodeCache
-
- Resolved
-