8152947: VM crash with assert(!removed || is_in_use()) failed: unused osr nmethod should be invalidated

Check OSR invalidation after nmethod state transition.

Reviewed-by: ddmitriev, vlivanov